#136	Home page - Alignment issue in non-standard resolutions (galaxy tab). Fix user alignment to left.

--- a/web-app/css/cgrails/default/less/home.less
+++ b/web-app/css/cgrails/default/less/home.less
@@ -102,6 +102,7 @@
 			}
 		}
 		#user-info {
+		    text-align:left;
 			border:solid 1px darken(@hero-unit-color,10%);
 			padding:1em;
 			.break-word {
